--- a/app/src/main/res/layout/activity_search_friends.xml
+++ b/app/src/main/res/layout/activity_search_friends.xml
@@ -28,22 +28,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/tv_friend_name_search"
+            android:textColor="@color/black"
+            android:text="Friend's Name"
+            android:layout_margin="5dp"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <EditText
             android:background="@drawable/edittext_design"
             android:textColor="@color/black"
-            android:textColorHint="@color/colorPrimary"
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
+            android:textSize="25sp"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:hint="Type friend's name"
             android:ems="10"
             android:id="@+id/name_search" />
 
         <LinearLayout
             android:background="@color/bg_login"
             android:orientation="vertical"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,6 +70,11 @@
             </LinearLayout>
 
         <ListView
+            android:scrollbars="vertical"
+            android:scrollbarFadeDuration="2000"
+            android:scrollbarSize="10dp"
+            android:verticalScrollbarPosition="right"
+            android:scrollbarThumbVertical="@drawable/edittext_design"
             android:id="@+id/search_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
