--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -55,18 +55,8 @@
         android:layout_below="@+id/tv1"
         android:id="@+id/password_login" />
 
-    <Button
-        android:background="@drawable/edittext_design"
-        android:text="sign in"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/password_login"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/signin" />
-
     <TextView
-        android:layout_below="@+id/signin"
+        android:layout_below="@+id/ll_login"
         android:gravity="center"
         android:id="@+id/register_from_login_screen"
         android:layout_margin="20dp"
@@ -111,7 +101,7 @@
             android:layout_margin="8dp"
             android:textColor="#000000"
             android:text="Login Here"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -123,5 +113,23 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:id="@+id/ll_login"
+        android:orientation="horizontal"
+        android:background="@color/bg_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password_login">
+        <TextView
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="Login"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_login" />
+    </LinearLayout>
 
 </RelativeLayout>
