--- a/app/src/main/res/layout/activity_read_slam.xml
+++ b/app/src/main/res/layout/activity_read_slam.xml
@@ -4,10 +4,41 @@
     android:id="@+id/activity_read_slam"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimary"
     tools:context="com.gmonetix.slambook.ReadSlam">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+        <include
+            layout="@layout/toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <ListView
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/app_bar"
+        android:scrollbars="vertical"
+        android:scrollbarFadeDuration="2000"
+        android:scrollbarSize="10dp"
+        android:verticalScrollbarPosition="right"
+        android:scrollbarThumbVertical="@drawable/edittext_design"
+        android:id="@+id/read_slam_listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/read_slam_progrss_bar" />
 
 </RelativeLayout>
