--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_friend_profile"
+    android:scrollbars="vertical"
+    android:scrollbarFadeDuration="2000"
+    android:scrollbarSize="10dp"
+    android:verticalScrollbarPosition="right"
+    android:scrollbarThumbVertical="@drawable/edittext_design"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -18,7 +23,6 @@
             <include
                 layout="@layout/toolbar"
                 />
-
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
@@ -29,11 +33,10 @@
             android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_user_profile_image"
+                android:id="@+id/iv_user_profile_image1"
                 android:layout_margin="16dp"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/profile"
                 app:civ_border_width="2dp"
                 app:civ_border_color="#FF000000"/>
 
@@ -42,7 +45,7 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/friend_profile_progress_bar" />
+                android:id="@+id/user_profile_image_progress_bar" />
 
         </FrameLayout>
 
@@ -50,9 +53,10 @@
             android:layout_above="@+id/edit_user_profile"
             android:id="@+id/tv_user_profile_username"
             android:layout_marginBottom="8dp"
+            android:gravity="center"
             android:layout_toRightOf="@+id/frame_image"
             android:layout_toEndOf="@+id/frame_image"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="@color/black"
             android:text="Username"
             android:layout_width="match_parent"
@@ -144,8 +148,8 @@
                     android:layout_height="wrap_content" />
 
                 <ImageView
+                    android:id="@+id/user_profile_gender_image"
                     android:layout_marginStart="8dp"
-                    android:src="@drawable/face4"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_marginLeft="8dp" />
