--- a/app/src/main/res/layout/content_user_home.xml
+++ b/app/src/main/res/layout/content_user_home.xml
@@ -1,18 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_user_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:scrollbars="vertical"
+    android:scrollbarFadeDuration="2000"
+    android:scrollbarSize="10dp"
+    android:verticalScrollbarPosition="right"
+    android:scrollbarThumbVertical="@drawable/edittext_design"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.gmonetix.slambook.user_profile.UserHome"
     tools:showIn="@layout/app_bar_user_home">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/user_home_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        <LinearLayout
+            android:id="@+id/ll1"
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_home_user_total_slams_received"
+                android:text="Total Slams Received : "
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-</ScrollView>
+            <TextView
+                android:id="@+id/tv_home_user_total_slams_sent"
+                android:text="Total Slams Sent : "
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll2"
+        android:layout_below="@+id/ll1"
+        android:weightSum="2"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_home_user1"
+            android:text="Sent to"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_home_user2"
+            android:text="Received From"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+        <View
+            android:id="@+id/view1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/ll1"
+            android:background="@color/bg_login"
+            android:layout_width="5dp"
+            android:layout_height="match_parent"
+            />
+
+        <ListView
+            android:id="@+id/user_home_to_list_view"
+            android:layout_below="@+id/ll2"
+            android:layout_marginTop="16dp"
+            android:layout_toLeftOf="@+id/view1"
+            android:layout_toStartOf="@+id/view1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    <ListView
+        android:id="@+id/user_home_from_list_view"
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="16dp"
+        android:layout_toRightOf="@+id/view1"
+        android:layout_toEndOf="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
