--- a/app/src/main/res/menu/activity_user_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_user_profile_drawer.xml
@@ -3,16 +3,24 @@
 
     <group>
         <item
-            android:id="@+id/nav_user_profile_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Home" />
-        <item
-            android:id="@+id/nav_user_profile_friends"
+            android:id="@+id/nav_user_profile_profile"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Friends" />
+            android:title="Profile" />
+        <item
+            android:id="@+id/nav_user_profile_search_friend"
+            android:icon="@drawable/ic_settings"
+            android:title="Search Friends" />
+        <item
+            android:id="@+id/nav_user_profile_write_slam"
+            android:icon="@drawable/ic_settings"
+            android:title="Write Slam" />
+        <item
+            android:id="@+id/nav_user_profile_read_slam"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Read Slam" />
         <item
             android:id="@+id/nav_user_profile_settings"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_settings"
             android:title="Settings" />
         <item
             android:id="@+id/nav_user_profile_logout"
@@ -24,12 +32,12 @@
         <menu>
             <item
                 android:id="@+id/nav_user_profile_help"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/ic_help"
                 android:title="Help" />
             <item
-                android:id="@+id/nav_user_profile_about_the_app"
-                android:icon="@drawable/ic_menu_send"
-                android:title="About" />
+                android:id="@+id/nav_user_profile_visit_us"
+                android:icon="@drawable/ic_info"
+                android:title="Visit us" />
         </menu>
     </item>
 
