--- a/app/src/main/res/layout/activity_search_friends.xml
+++ b/app/src/main/res/layout/activity_search_friends.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_search_friends"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
     tools:context="com.gmonetix.slambook.SearchFriendsActivity">
@@ -77,7 +76,7 @@
             android:scrollbarThumbVertical="@drawable/edittext_design"
             android:id="@+id/search_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
