--- a/app/src/main/res/layout/content_user_home.xml
+++ b/app/src/main/res/layout/content_user_home.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_home_user_total_slams_received"
-                android:text="Total Slams Received : "
+                android:text="Slams received : "
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -32,7 +32,7 @@
 
             <TextView
                 android:id="@+id/tv_home_user_total_slams_sent"
-                android:text="Total Slams Sent : "
+                android:text="Slams Sent : "
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
