--- a/app/src/main/res/layout/activity_search_friends.xml
+++ b/app/src/main/res/layout/activity_search_friends.xml
@@ -73,7 +73,7 @@
             android:scrollbarFadeDuration="2000"
             android:scrollbarSize="10dp"
             android:verticalScrollbarPosition="right"
-            android:scrollbarThumbVertical="@drawable/edittext_design"
+            android:scrollbarThumbVertical="@drawable/scrollbar"
             android:id="@+id/search_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
