--- a/app/src/main/res/layout/activity_update_sent_slam.xml
+++ b/app/src/main/res/layout/activity_update_sent_slam.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_slams"
-    android:background="@color/colorPrimary"
+    android:id="@+id/activity_update_sent_slam"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gmonetix.slambook.WriteSlam">
+    android:background="@color/colorPrimary"
+    tools:context="com.gmonetix.slambook.UpdateSentSlam">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -1560,19 +1560,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <android.support.design.widget.FloatingActionButton
-        app:rippleColor="@color/white"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentEnd="true"
+    <include
+        android:id="@+id/fab_slam1"
         android:layout_above="@+id/footer1"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:fabSize="normal"
-        android:src="@drawable/ic_home"
-        android:elevation="6dp"
-        android:id="@+id/btn_home"
-        app:pressedTranslationZ="12dp"/>
+        layout="@layout/fab_home" />
 
     <android.support.design.widget.FloatingActionButton
         app:rippleColor="@color/white"
@@ -1581,12 +1576,20 @@
         app:fabSize="normal"
         android:src="@drawable/ic_send"
         android:elevation="6dp"
-        android:id="@+id/btn_send"
+        android:id="@+id/btn_update"
         app:pressedTranslationZ="12dp"
-        android:layout_marginBottom="8dp"
-        android:layout_above="@+id/btn_home"
-        android:layout_alignEnd="@+id/btn_home"
-        android:layout_alignRight="@+id/btn_home" />
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/fab_slam1" />
 
+    <ProgressBar
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar_update_sent_slam" />
 
 </RelativeLayout>
