--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -7,7 +7,7 @@
     android:scrollbarFadeDuration="2000"
     android:scrollbarSize="10dp"
     android:verticalScrollbarPosition="right"
-    android:scrollbarThumbVertical="@drawable/edittext_design"
+    android:scrollbarThumbVertical="@drawable/scrollbar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
