--- a/app/src/main/res/menu/activity_user_profile_toolbar.xml
+++ b/app/src/main/res/menu/activity_user_profile_toolbar.xml
@@ -19,6 +19,11 @@
             android:id="@+id/toolbar_user_profile_youtube"
             app:showAsAction="never"
             android:title="Youtube Channel" />
+
+        <item
+            android:id="@+id/toolbar_user_profile_exit"
+            app:showAsAction="never"
+            android:title="Exit" />
     </group>
 
 </menu>
