--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -42,4 +42,11 @@
 
     <include layout="@layout/content_edit_profile" />
 
+    <include
+        android:id="@+id/fab_slam1"
+        android:layout_gravity="bottom|end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/fab_home" />
+
 </android.support.design.widget.CoordinatorLayout>
