--- a/app/src/main/res/layout/activity_friend_profile.xml
+++ b/app/src/main/res/layout/activity_friend_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_friend_profile"
@@ -8,151 +8,165 @@
     android:background="@color/colorPrimary"
     tools:context="com.gmonetix.slambook.user_profile.FriendProfile">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <include
-                layout="@layout/toolbar"
-                />
-
-        </android.support.design.widget.AppBarLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <FrameLayout
-                android:id="@+id/frame_image"
-                android:layout_margin="16dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/iv_friend_profile_image"
-                    android:layout_margin="16dp"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/profile"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="#FF000000"/>
-
-                <ProgressBar
-                    android:layout_gravity="center"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/friend_profile_progress_bar" />
-
-            </FrameLayout>
-
-            <TextView
-                android:layout_gravity="center"
-                android:id="@+id/tv_friend_profile_username"
-                android:layout_marginBottom="8dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
+        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_friend_profile_name"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Name"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+                <include
+                    layout="@layout/toolbar"
+                    />
 
-            <TextView
-                android:id="@+id/tv_friend_profile_email"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_friend_profile_dob"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Date Of Birth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            </android.support.design.widget.AppBarLayout>
 
             <LinearLayout
-                android:layout_margin="5dp"
                 android:orientation="horizontal"
-                android:id="@+id/friend_profile_gender"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+                <FrameLayout
+                    android:id="@+id/frame_image"
+                    android:layout_margin="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/iv_friend_profile_image"
+                        android:layout_margin="16dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/profile"
+                        app:civ_border_width="2dp"
+                        app:civ_border_color="#FF000000"/>
+
+                    <ProgressBar
+                        android:layout_gravity="center"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/friend_profile_progress_bar" />
+
+                </FrameLayout>
 
                 <TextView
                     android:layout_gravity="center"
-                    android:id="@+id/tv_friend_profile_gender"
+                    android:id="@+id/tv_friend_profile_username"
+                    android:layout_marginBottom="8dp"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:text="Gender"
+                    android:text="Username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <ImageView
-                    android:id="@+id/iv_friend_profile_gender"
-                    android:layout_marginStart="8dp"
-                    android:src="@drawable/face4"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="8dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_friend_profile_name"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_friend_profile_email"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_friend_profile_dob"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Date Of Birth"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:layout_margin="5dp"
+                    android:orientation="horizontal"
+                    android:id="@+id/friend_profile_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="center"
+                        android:id="@+id/tv_friend_profile_gender"
+                        android:textSize="20sp"
+                        android:textColor="@color/black"
+                        android:text="Gender"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:id="@+id/iv_friend_profile_gender"
+                        android:layout_marginStart="8dp"
+                        android:src="@drawable/face4"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginLeft="8dp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_friend_profile_description"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="About Me"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_friend_profile_description"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="About Me"
+            <LinearLayout
+                android:id="@+id/ll_friend_profile_write_slam"
+                android:background="@color/bg_login"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="50dp">
+
+                <TextView
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_friend_profile_write_slam"
+                    android:layout_margin="5dp"
+                    android:textSize="40sp"
+                    android:textColor="@color/black"
+                    android:text="Write Slam"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </LinearLayout>
+    </ScrollView>
 
-        <LinearLayout
-            android:id="@+id/ll_friend_profile_write_slam"
-            android:background="@color/bg_login"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
+    <include
+        android:id="@+id/fab_slam1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+        layout="@layout/fab_home" />
 
-            <TextView
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:id="@+id/tv_friend_profile_write_slam"
-                android:layout_margin="5dp"
-                android:textSize="40sp"
-                android:textColor="@color/black"
-                android:text="Write Slam"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
