--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -95,4 +95,12 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <include
+        android:id="@+id/fab_slam1"
+        android:layout_gravity="end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        layout="@layout/fab_home" />
+
 </LinearLayout>
