--- a/app/src/main/res/layout/activity_sent_slams_activty.xml
+++ b/app/src/main/res/layout/activity_sent_slams_activty.xml
@@ -34,4 +34,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <include
+        android:id="@+id/fab_slam1"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/fab_home" />
+
 </RelativeLayout>
