--- a/app/src/main/res/layout/activity_update_sent_slam.xml
+++ b/app/src/main/res/layout/activity_update_sent_slam.xml
@@ -19,22 +19,93 @@
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
-        android:layout_above="@+id/footer1"
-        android:layout_below="@+id/app_bar"
         android:scrollbars="vertical"
         android:scrollbarFadeDuration="2000"
         android:scrollbarSize="10dp"
         android:verticalScrollbarPosition="right"
         android:scrollbarThumbVertical="@drawable/scrollbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/app_bar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/ll11"
                 android:layout_margin="16dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView android:padding="8dp"
+                    android:id="@+id/tvName"
+                    android:text="Name:"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView android:padding="8dp"
+                    android:id="@+id/tvFromUsername"
+                    android:text="UserName:"
+                    android:layout_weight="1"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:src="@drawable/des1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/iv3" />
+
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/frame1"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_profile_image_read_slam_final"
+                    android:layout_width="100dp"
+                    android:src="@drawable/profile"
+                    android:layout_height="100dp"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/iv_profile_image_read_slam_progressBar" />
+
+            </FrameLayout>
+
+            <ImageView
+                android:id="@+id/iv1"
+                android:layout_alignStart="@+id/frame1"
+                android:layout_below="@+id/frame1"
+                android:src="@drawable/bck41"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/frame1" />
+
+            <LinearLayout
+                android:layout_margin="16dp"
+                android:layout_below="@+id/ll11"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
