--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,172 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_friend_profile"
-    android:scrollbars="vertical"
-    android:scrollbarFadeDuration="2000"
-    android:scrollbarSize="10dp"
-    android:verticalScrollbarPosition="right"
-    android:scrollbarThumbVertical="@drawable/scrollbar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context="com.gmonetix.slambook.user_profile.UserProfile">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:scrollbarFadeDuration="2000"
+        android:scrollbarSize="10dp"
+        android:verticalScrollbarPosition="right"
+        android:scrollbarThumbVertical="@drawable/scrollbar" >
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <include
-                layout="@layout/toolbar"
-                />
-        </android.support.design.widget.AppBarLayout>
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appBarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <include
+                    layout="@layout/toolbar"
+                    />
+            </android.support.design.widget.AppBarLayout>
 
-        <FrameLayout
-            android:id="@+id/frame_image"
-            android:layout_below="@+id/appBarLayout"
-            android:layout_margin="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_user_profile_image1"
+            <FrameLayout
+                android:id="@+id/frame_image"
+                android:layout_below="@+id/appBarLayout"
                 android:layout_margin="16dp"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
-
-            <ProgressBar
-                android:layout_gravity="center"
-                style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_profile_image_progress_bar" />
+                android:layout_height="wrap_content">
 
-        </FrameLayout>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_user_profile_image1"
+                    android:layout_margin="16dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
 
-        <TextView
-            android:layout_above="@+id/edit_user_profile"
-            android:id="@+id/tv_user_profile_username"
-            android:layout_marginBottom="8dp"
-            android:gravity="center"
-            android:layout_toRightOf="@+id/frame_image"
-            android:layout_toEndOf="@+id/frame_image"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:text="Username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+                <ProgressBar
+                    android:layout_gravity="center"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/user_profile_image_progress_bar" />
 
-        <LinearLayout
-            android:id="@+id/edit_user_profile"
-            android:layout_marginBottom="20dp"
-            android:layout_alignBottom="@+id/frame_image"
-            android:layout_toRightOf="@+id/frame_image"
-            android:layout_toEndOf="@+id/frame_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:src="@drawable/pencil1"
-                android:layout_width="40dp"
-                android:layout_height="40dp" />
+            </FrameLayout>
 
             <TextView
-                android:id="@+id/tv21"
+                android:layout_above="@+id/edit_user_profile"
+                android:id="@+id/tv_user_profile_username"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:layout_toRightOf="@+id/frame_image"
+                android:layout_toEndOf="@+id/frame_image"
+                android:textSize="25sp"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:text="Edit"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_below="@+id/frame_image"
-            android:orientation="vertical"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_user_profile_name"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_user_profile_email"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_user_profile_phone_number"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_user_profile_dob"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="Date Of Birth"
+                android:text="Username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <LinearLayout
-                android:layout_margin="5dp"
-                android:orientation="horizontal"
-                android:id="@+id/user_profile_gender"
+                android:id="@+id/edit_user_profile"
+                android:layout_marginBottom="20dp"
+                android:layout_alignBottom="@+id/frame_image"
+                android:layout_toRightOf="@+id/frame_image"
+                android:layout_toEndOf="@+id/frame_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_gravity="center"
-                    android:id="@+id/tv_user_profile_gender"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:text="Gender"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
                 <ImageView
-                    android:id="@+id/user_profile_gender_image"
-                    android:layout_marginStart="8dp"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="8dp" />
+                    android:src="@drawable/pencil1"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" />
+
+                <TextView
+                    android:id="@+id/tv21"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:text="Edit"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_user_profile_description"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:text="About Me"
+            <LinearLayout
+                android:layout_below="@+id/frame_image"
+                android:orientation="vertical"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_user_profile_name"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_user_profile_email"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-</ScrollView>
+                <TextView
+                    android:id="@+id/tv_user_profile_phone_number"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_user_profile_dob"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="Date Of Birth"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:layout_margin="5dp"
+                    android:orientation="horizontal"
+                    android:id="@+id/user_profile_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="center"
+                        android:id="@+id/tv_user_profile_gender"
+                        android:textSize="20sp"
+                        android:textColor="@color/black"
+                        android:text="Gender"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:id="@+id/user_profile_gender_image"
+                        android:layout_marginStart="8dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginLeft="8dp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_user_profile_description"
+                    android:layout_margin="5dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:text="About Me"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+
+    <include
+        android:id="@+id/fab_slam1"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/fab_home" />
+
+</RelativeLayout>
