--- a/app/src/main/res/menu/activity_user_profile_drawer.xml
+++ b/app/src/main/res/menu/activity_user_profile_drawer.xml
@@ -27,6 +27,10 @@
             android:id="@+id/nav_user_profile_logout"
             android:icon="@drawable/ic_warning"
             android:title="Logout" />
+        <item
+            android:id="@+id/nav_user_profile_exit"
+            android:icon="@drawable/ic_warning"
+            android:title="Exit" />
     </group>
 
     <item android:title="Extras">
