--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -151,7 +151,7 @@
         </RadioGroup>
 
         <LinearLayout
-            android:background="@color/btn_login"
+            android:background="@drawable/button_xml"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
