--- a/app/src/main/res/drawable/edittext_design.xml
+++ b/app/src/main/res/drawable/edittext_design.xml
@@ -3,16 +3,20 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="2dp"
+        android:width="1.5dp"
         android:color="@color/colorAccent" />
 
-    <gradient
-        android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF"
-        android:centerColor="#FFFFFF"
-        />
+    <solid android:color="#f6f6f8" >
+    </solid>
 
     <corners
         android:radius="5dp" />
+
+    <padding
+        android:bottom="2dp"
+        android:left="8dp"
+        android:right="8dp"
+        android:top="2dp" >
+    </padding>
 
 </shape>
