--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -81,7 +81,7 @@
     <LinearLayout
         android:id="@+id/ll_change_password"
         android:layout_marginTop="20dp"
-        android:background="@color/bg_login"
+        android:background="@drawable/button_xml"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
