--- a/app/src/main/res/layout/activity_search_friends.xml
+++ b/app/src/main/res/layout/activity_search_friends.xml
@@ -48,7 +48,7 @@
             android:id="@+id/name_search" />
 
         <LinearLayout
-            android:background="@color/bg_login"
+            android:background="@drawable/button_xml"
             android:orientation="vertical"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="8dp"
