--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#009688"
     tools:context="com.gmonetix.slambook.SettingsActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -18,42 +19,84 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/llSettings1"
+        android:layout_margin="16dp"
+        android:orientation="horizontal"
         android:layout_below="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:src="@drawable/ic_company_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:src="@mipmap/ic_launcher"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
 
-        <TextView
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:text="Put logo of the app and desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="50sp"
+                android:text="Slam Book"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llSettings2"
+        android:layout_margin="16dp"
+        android:orientation="horizontal"
+        android:layout_below="@+id/llSettings1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:src="@drawable/ic_info"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:text="Version 1.0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
     </LinearLayout>
 
         <LinearLayout
-            android:layout_above="@+id/ll_settings_delete_account"
-            android:background="@color/bg_login"
+            android:layout_margin="16dp"
+            android:layout_below="@+id/llSettings2"
+            android:background="@drawable/button_xml"
             android:id="@+id/ll_settings_change_password"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_write"
                 android:layout_width="40dp"
                 android:layout_height="40dp" />
 
             <TextView
-                android:gravity="center"
-                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:id="@+id/tv_settings_change_password"
                 android:textColor="@color/black"
                 android:text="Change Password"
@@ -63,23 +106,25 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_above="@+id/footer1"
-            android:layout_marginTop="10dp"
-            android:background="@color/bg_login"
+            android:layout_below="@+id/ll_settings_change_password"
+            android:layout_margin="16dp"
+            android:background="@drawable/button_xml"
             android:id="@+id/ll_settings_delete_account"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_delete"
                 android:layout_width="40dp"
                 android:layout_height="40dp" />
 
             <TextView
-                android:gravity="center"
-                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:id="@+id/tv_settings_delete_account"
                 android:textColor="@color/black"
                 android:text="Delete Account"
@@ -101,7 +146,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"
+        android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/fab_home" />
