--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -21,6 +21,7 @@
         android:fitsSystemWindows="true"
         android:background="@color/colorPrimary"
         app:headerLayout="@layout/nav_header_user_home"
-        app:menu="@menu/activity_user_profile_drawer" />
+        app:menu="@menu/activity_user_profile_drawer"
+        app:itemTextColor="@color/black"/>
 
 </android.support.v4.widget.DrawerLayout>
