--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -7,105 +7,141 @@
     android:layout_height="match_parent"
     tools:context="com.gmonetix.slambook.user_login.UserLoginActivity">
 
-
-    <TextView
-        android:id="@+id/tv2"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_above="@+id/username_login"
-        android:textColor="#000000"
-        android:text="Username"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:layout_margin="8dp"
-        android:background="@drawable/edittext_design"
+    <ScrollView
         android:layout_width="match_parent"
-        android:textSize="40sp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:textColor="#000000"
-        android:ems="10"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/username_login" />
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv2"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_below="@+id/linearLayout"
+                android:textColor="#000000"
+                android:text="Username"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv1"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_below="@+id/username_login"
-        android:textColor="#000000"
-        android:text="Password"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            <EditText
+                android:layout_margin="8dp"
+                android:background="@drawable/edittext_design"
+                android:layout_width="match_parent"
+                android:textSize="40sp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:textColor="#000000"
+                android:ems="10"
+                android:layout_below="@+id/tv2"
+                android:id="@+id/username_login" />
 
-    <EditText
-        android:layout_margin="8dp"
-        android:background="@drawable/edittext_design"
-        android:textSize="40sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:textColor="#000000"
-        android:layout_below="@+id/tv1"
-        android:id="@+id/password_login" />
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_below="@+id/username_login"
+                android:textColor="#000000"
+                android:text="Password"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_below="@+id/ll_login"
-        android:gravity="center"
-        android:id="@+id/register_from_login_screen"
-        android:layout_margin="20dp"
-        android:textColor="#000000"
-        android:text="Not a member yet? Sign up!"
-        android:textSize="20sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <EditText
+                android:layout_margin="8dp"
+                android:background="@drawable/edittext_design"
+                android:textSize="40sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:textColor="#000000"
+                android:layout_below="@+id/tv1"
+                android:id="@+id/password_login" />
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-            <include
-                layout="@layout/toolbar"/>
+            <TextView
+                android:layout_below="@+id/ll_login"
+                android:gravity="center"
+                android:id="@+id/register_from_login_screen"
+                android:layout_margin="20dp"
+                android:textColor="#000000"
+                android:text="Not a member yet? Sign up!"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
+                <include
+                    layout="@layout/toolbar"/>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tv2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+            </android.support.design.widget.AppBarLayout>
 
-        <ImageView
-            android:id="@+id/sample_image_login_screen"
-            android:scaleType="fitXY"
-            android:layout_margin="20dp"
-            android:layout_width="146dp"
-            android:layout_height="114dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/app_bar"
+                android:layout_marginTop="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/linearLayout">
 
-        <TextView
-            android:layout_gravity="center"
-            android:id="@+id/tvLoginHere"
-            android:layout_margin="8dp"
-            android:textColor="#000000"
-            android:text="Login Here"
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+                <ImageView
+                    android:id="@+id/sample_image_login_screen"
+                    android:scaleType="fitXY"
+                    android:layout_margin="20dp"
+                    android:layout_width="146dp"
+                    android:layout_height="114dp" />
 
-    </LinearLayout>
+                <TextView
+                    android:layout_gravity="center"
+                    android:id="@+id/tvLoginHere"
+                    android:layout_margin="8dp"
+                    android:textColor="#000000"
+                    android:text="Login Here"
+                    android:textSize="30sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_login"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:background="@drawable/button_xml"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/password_login">
+                <TextView
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:text="Login"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_login" />
+            </LinearLayout>
+
+            <ProgressBar
+                android:visibility="gone"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/progress_bar_login_activity" />
+        </RelativeLayout>
+    </ScrollView>
 
     <ImageView
         android:src="@drawable/footer1"
@@ -113,23 +149,5 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:id="@+id/ll_login"
-        android:orientation="horizontal"
-        android:background="@color/bg_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/password_login">
-        <TextView
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:text="Login"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_login" />
-    </LinearLayout>
 
 </RelativeLayout>
