--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -67,6 +67,7 @@
 
             <LinearLayout
                 android:id="@+id/edit_user_profile"
+                android:background="@drawable/button_xml"
                 android:layout_marginBottom="20dp"
                 android:layout_alignBottom="@+id/frame_image"
                 android:layout_toRightOf="@+id/frame_image"
@@ -75,12 +76,14 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:layout_margin="8dp"
                     android:src="@drawable/pencil1"
                     android:layout_width="40dp"
                     android:layout_height="40dp" />
 
                 <TextView
                     android:id="@+id/tv21"
+                    android:layout_margin="8dp"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:text="Edit"
