--- a/app/src/main/res/layout/content_user_home.xml
+++ b/app/src/main/res/layout/content_user_home.xml
@@ -127,4 +127,88 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/imageView2" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/ll_no_received_data"
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="16dp"
+        android:layout_toRightOf="@+id/view1"
+        android:layout_toEndOf="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/user_home_tv4"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="No"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/user_home_tv5"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Slams"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/user_home_tv6"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Received"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_no_sent_data"
+        android:orientation="vertical"
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="16dp"
+        android:layout_toLeftOf="@+id/view1"
+        android:layout_toStartOf="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/user_home_tv1"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="No"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/user_home_tv2"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Slams"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/user_home_tv3"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Sent"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 </RelativeLayout>
