--- a/app/src/main/res/layout/activity_read_slam.xml
+++ b/app/src/main/res/layout/activity_read_slam.xml
@@ -41,6 +41,45 @@
         android:layout_centerVertical="true"
         android:id="@+id/read_slam_progrss_bar" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/ll_no_received_slams"
+        android:layout_below="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/read_slam_tv1"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="No"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/read_slam_tv2"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Slams"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/read_slam_tv3"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Received"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
     <include
         android:id="@+id/fab_slam1"
         android:layout_alignParentEnd="true"
