--- a/app/src/main/res/layout/activity_sent_slams_activty.xml
+++ b/app/src/main/res/layout/activity_sent_slams_activty.xml
@@ -24,15 +24,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
+    <LinearLayout
         android:id="@+id/sent_slams_tv_show"
-        android:gravity="center"
-        android:layout_centerVertical="true"
-        android:text="No Slams Sent yet !"
-        android:textColor="@color/black"
-        android:textSize="40sp"
+        android:orientation="vertical"
+        android:layout_below="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/sent_slams_tv1"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="No"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/sent_slams_tv2"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Slams"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/sent_slams_tv3"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:text="Sent"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <include
         android:id="@+id/fab_slam1"
