--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/tv_settings_slambook"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="50sp"
@@ -57,23 +57,20 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:layout_marginLeft="16dp"
             android:src="@drawable/ic_info"
             android:layout_width="40dp"
             android:layout_height="40dp" />
 
-        <LinearLayout
-            android:orientation="vertical"
+        <TextView
             android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/tv_settings_version"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:text="Version 1.0"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:textColor="@color/black"
-                android:textSize="30sp"
-                android:text="Version 1.0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
@@ -95,6 +92,7 @@
                 android:layout_height="40dp" />
 
             <TextView
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:id="@+id/tv_settings_change_password"
@@ -123,6 +121,7 @@
                 android:layout_height="40dp" />
 
             <TextView
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:id="@+id/tv_settings_delete_account"
@@ -146,7 +145,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/fab_home" />
