--- a/app/src/main/res/layout/content_user_home.xml
+++ b/app/src/main/res/layout/content_user_home.xml
@@ -6,11 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:scrollbars="vertical"
-    android:scrollbarFadeDuration="2000"
-    android:scrollbarSize="10dp"
-    android:verticalScrollbarPosition="right"
-    android:scrollbarThumbVertical="@drawable/edittext_design"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.gmonetix.slambook.user_profile.UserHome"
     tools:showIn="@layout/app_bar_user_home">
@@ -73,13 +68,12 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-        <View
-            android:id="@+id/view1"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/ll2"
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            />
+    <View
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="4dp"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
 
         <ListView
             android:id="@+id/user_home_to_list_view"
@@ -98,34 +92,6 @@
         android:layout_toEndOf="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-
-    <ImageView
-        android:id="@+id/footer1"
-        android:src="@drawable/footer1"
-        android:scaleType="fitXY"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/high4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:scaleType="fitXY"
-        android:src="@drawable/des3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/imageView2" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -210,5 +176,42 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/view1"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/ll2"
+        android:layout_marginTop="4dp"
+        android:background="@color/white"
+        android:layout_width="2dp"
+        android:layout_height="match_parent"
+        />
+
+    <ImageView
+        android:id="@+id/footer1"
+        android:src="@drawable/footer1"
+        android:scaleType="fitXY"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:scaleType="fitXY"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/high4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:scaleType="fitXY"
+        android:src="@drawable/des3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/imageView2" />
 
 </RelativeLayout>
