--- a/app/src/main/res/layout/fab_home.xml
+++ b/app/src/main/res/layout/fab_home.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content">
 
     <android.support.design.widget.FloatingActionButton
-        app:rippleColor="@color/white"
+        app:rippleColor="@color/colorPrimary"
+        app:elevation="8dp"
+        app:backgroundTint="@color/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fabSize="normal"
